--- a/index.html
+++ b/index.html
@@ -128,25 +128,29 @@
         </section>
 
         <!-- Education section -->
-        <section id="education" class="section">
-            <h2 data-english="Education" data-spanish="Educación">Education</h2>
+<section id="education" class="section">
+    <h2 data-english="Education" data-spanish="Educación">Education</h2>
+    <ul>
+        <li data-english="High School Diploma - U.E Andrés Eloy Blanco, July 2013" data-spanish="Diploma de Bachillerato - U.E Andrés Eloy Blanco, Julio 2013">High School Diploma - U.E Andrés Eloy Blanco, July 2013</li>
+        
+        <!-- Courses subsection -->
+        <li data-english="Courses" data-spanish="Cursos">
             <ul>
-                <li data-english="High School Diploma - U.E Andrés Eloy Blanco, July 2013" data-spanish="Diploma de Bachillerato - U.E Andrés Eloy Blanco, Julio 2013">High School Diploma - U.E Andrés Eloy Blanco, July 2013</li>
-                <li data-english="Courses" data-spanish="Cursos">
-                    <ul>
-                        <li data-english="Basic Computer Technician - Completed March 2012" data-spanish="Técnico Básico en Informática - Completado en Marzo 2012">Basic Computer Technician - Completed March 2012</li>
-                        <li data-english="Advanced English Course for Adults - Completed October 2013" data-spanish="Curso Avanzado de Inglés para Adultos - Completado en Octubre 2013">Advanced English Course for Adults - Completed October 2013</li>
-                        <li data-english="Technician in Prehospital Emergencies - Completed April 2014" data-spanish="Técnico en Emergencias Prehospitalarias - Completado en Abril 2014">Technician in Prehospital Emergencies - Completed April 2014</li>
-                    </ul>
-                </li>
-                <li data-english="University Studies" data-spanish="Estudios Universitarios">
-                    <ul>
-                        <li data-english="Biology - Universidad del Zulia, Three semesters completed" data-spanish="Biología - Universidad del Zulia, Tres semestres completados">Biology - Universidad del Zulia, Three semesters completed</li>
-                        <li data-english="Mechanical Engineering - Universidad del Zulia, One semester completed" data-spanish="Ingeniería Mecánica - Universidad del Zulia, Un semestre completado">Mechanical Engineering - Universidad del Zulia, One semester completed</li>
-                    </ul>
-                </li>
+                <li data-english="Basic Computer Technician - Completed March 2012" data-spanish="Técnico Básico en Informática - Completado en Marzo 2012">Basic Computer Technician - Completed March 2012</li>
+                <li data-english="Advanced English Course for Adults - Completed October 2013" data-spanish="Curso Avanzado de Inglés para Adultos - Completado en Octubre 2013">Advanced English Course for Adults - Completed October 2013</li>
+                <li data-english="Technician in Prehospital Emergencies - Completed April 2014" data-spanish="Técnico en Emergencias Prehospitalarias - Completado en Abril 2014">Technician in Prehospital Emergencies - Completed April 2014</li>
             </ul>
-        </section>
+        </li>
+        
+        <!-- University Studies subsection -->
+        <li data-english="University Studies" data-spanish="Estudios Universitarios">
+            <ul>
+                <li data-english="Biology - Universidad del Zulia, Three semesters completed" data-spanish="Biología - Universidad del Zulia, Tres semestres completados">Biology - Universidad del Zulia, Three semesters completed</li>
+                <li data-english="Mechanical Engineering - Universidad del Zulia, One semester completed" data-spanish="Ingeniería Mecánica - Universidad del Zulia, Un semestre completado">Mechanical Engineering - Universidad del Zulia, One semester completed</li>
+            </ul>
+        </li>
+    </ul>
+</section>
 
         <!-- Contact section -->
         <section id="contact" class="section">
